@@ -1,5 +1,8 @@
 2005-11-08  Werner Koch  <wk@g10code.com>
 
+	* src/gpg4win.mk.in: Also strip DLLs; I am using stripped DLLs for
+	months now.
+
 	Released 0.0.2.
 
 	* src/installer.nsi (T_WelcomeTitle): New.
